--- a/James Snee WWDC/en.lproj/Overview_View.xib
+++ b/James Snee WWDC/en.lproj/Overview_View.xib
@@ -43,7 +43,7 @@
 					<object class="IBUITextView" id="1014055884">
 						<reference key="NSNextResponder" ref="774585933"/>
 						<int key="NSvFlags">274</int>
-						<string key="NSFrame">{{138, 58}, {168, 91}}</string>
+						<string key="NSFrame">{{138, 53}, {168, 80}}</string>
 						<reference key="NSSuperview" ref="774585933"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="998097531"/>
@@ -59,22 +59,36 @@
 						<bool key="IBUIUsesAttributedText">YES</bool>
 						<object class="NSAttributedString" key="IBUIAttributedText">
 							<string type="base64-UTF8" key="NSString">UGguRC4gU3R1ZGVudCwKQ29tcHV0ZXIgTGFib3JhdG9yeSwKVW5pdmVyc2l0eSBvZiBDYW1icmlkZ2UK
-amFtZXMuc25lZUBnbWFpbC5jb20</string>
-							<dictionary key="NSAttributes">
-								<object class="NSColor" key="NSColor">
-									<int key="NSColorSpace">1</int>
-									<bytes key="NSRGB">MSAxIDEAA</bytes>
-								</object>
-								<object class="NSFont" key="NSFont">
-									<string key="NSName">HelveticaNeue</string>
-									<double key="NSSize">14</double>
-									<int key="NSfFlags">16</int>
-								</object>
-								<object class="NSMutableParagraphStyle" key="NSParagraphStyle">
-									<int key="NSAlignment">4</int>
-									<nil key="NSTabStops"/>
-								</object>
-							</dictionary>
+amFtZXMuc25lZUBjbC5jYW0uYWMudWs</string>
+							<array class="NSMutableArray" key="NSAttributes">
+								<dictionary>
+									<object class="NSColor" key="NSColor" id="224583250">
+										<int key="NSColorSpace">1</int>
+										<bytes key="NSRGB">MSAxIDEAA</bytes>
+									</object>
+									<object class="NSFont" key="NSFont">
+										<string key="NSName">HelveticaNeue</string>
+										<double key="NSSize">14</double>
+										<int key="NSfFlags">16</int>
+									</object>
+									<object class="NSMutableParagraphStyle" key="NSParagraphStyle" id="287558195">
+										<int key="NSAlignment">4</int>
+										<nil key="NSTabStops"/>
+									</object>
+								</dictionary>
+								<dictionary>
+									<reference key="NSColor" ref="224583250"/>
+									<object class="NSFont" key="NSFont">
+										<string key="NSName">HelveticaNeue</string>
+										<double key="NSSize">13</double>
+										<int key="NSfFlags">16</int>
+									</object>
+									<reference key="NSParagraphStyle" ref="287558195"/>
+								</dictionary>
+							</array>
+							<object class="NSMutableData" key="NSAttributeInfo">
+								<bytes key="NS.bytes">PAAXAQ</bytes>
+							</object>
 						</object>
 						<bool key="IBUIEditable">NO</bool>
 						<object class="IBUITextInputTraits" key="IBUITextInputTraits">
@@ -242,7 +256,6 @@ amFtZXMuc25lZUBnbWFpbC5jb20</string>
 						<string key="NSFrame">{{0, 217}, {320, 237}}</string>
 						<reference key="NSSuperview" ref="774585933"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
@@ -429,21 +442,21 @@ amFtZXMuc25lZUBnbWFpbC5jb20</string>
 						<int key="objectID">6</int>
 						<reference key="object" ref="774585933"/>
 						<array class="NSMutableArray" key="children">
-							<object class="IBNSLayoutConstraint" id="133597491">
+							<object class="IBNSLayoutConstraint" id="169178019">
 								<reference key="firstItem" ref="704817461"/>
 								<int key="firstAttribute">3</int>
 								<int key="relation">0</int>
-								<reference key="secondItem" ref="1014055884"/>
-								<int key="secondAttribute">4</int>
+								<reference key="secondItem" ref="30544756"/>
+								<int key="secondAttribute">3</int>
 								<float key="multiplier">1</float>
-								<object class="IBNSLayoutSymbolicConstant" key="constant">
-									<double key="value">8</double>
+								<object class="IBLayoutConstant" key="constant">
+									<double key="value">0.0</double>
 								</object>
 								<float key="priority">1000</float>
 								<reference key="containingView" ref="774585933"/>
 								<int key="scoringType">6</int>
 								<float key="scoringTypeFloat">24</float>
-								<int key="contentType">3</int>
+								<int key="contentType">2</int>
 							</object>
 							<object class="IBNSLayoutConstraint" id="1037935863">
 								<reference key="firstItem" ref="704817461"/>
@@ -477,22 +490,6 @@ amFtZXMuc25lZUBnbWFpbC5jb20</string>
 								<float key="scoringTypeFloat">24</float>
 								<int key="contentType">2</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="282484195">
-								<reference key="firstItem" ref="30544756"/>
-								<int key="firstAttribute">3</int>
-								<int key="relation">0</int>
-								<reference key="secondItem" ref="1014055884"/>
-								<int key="secondAttribute">4</int>
-								<float key="multiplier">1</float>
-								<object class="IBNSLayoutSymbolicConstant" key="constant">
-									<double key="value">8</double>
-								</object>
-								<float key="priority">1000</float>
-								<reference key="containingView" ref="774585933"/>
-								<int key="scoringType">6</int>
-								<float key="scoringTypeFloat">24</float>
-								<int key="contentType">3</int>
-							</object>
 							<object class="IBNSLayoutConstraint" id="446343903">
 								<reference key="firstItem" ref="30544756"/>
 								<int key="firstAttribute">5</int>
@@ -525,7 +522,7 @@ amFtZXMuc25lZUBnbWFpbC5jb20</string>
 								<float key="scoringTypeFloat">24</float>
 								<int key="contentType">2</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="36003328">
+							<object class="IBNSLayoutConstraint" id="170602232">
 								<reference key="firstItem" ref="872783225"/>
 								<int key="firstAttribute">3</int>
 								<int key="relation">0</int>
@@ -573,21 +570,37 @@ amFtZXMuc25lZUBnbWFpbC5jb20</string>
 								<float key="scoringTypeFloat">29</float>
 								<int key="contentType">3</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="616323406">
+							<object class="IBNSLayoutConstraint" id="812923519">
 								<reference key="firstItem" ref="998097531"/>
 								<int key="firstAttribute">3</int>
 								<int key="relation">0</int>
-								<reference key="secondItem" ref="1014055884"/>
-								<int key="secondAttribute">4</int>
+								<reference key="secondItem" ref="774585933"/>
+								<int key="secondAttribute">3</int>
 								<float key="multiplier">1</float>
-								<object class="IBNSLayoutSymbolicConstant" key="constant">
-									<double key="value">8</double>
+								<object class="IBLayoutConstant" key="constant">
+									<double key="value">157</double>
+								</object>
+								<float key="priority">1000</float>
+								<reference key="containingView" ref="774585933"/>
+								<int key="scoringType">3</int>
+								<float key="scoringTypeFloat">9</float>
+								<int key="contentType">3</int>
+							</object>
+							<object class="IBNSLayoutConstraint" id="491345573">
+								<reference key="firstItem" ref="998097531"/>
+								<int key="firstAttribute">3</int>
+								<int key="relation">0</int>
+								<reference key="secondItem" ref="30544756"/>
+								<int key="secondAttribute">3</int>
+								<float key="multiplier">1</float>
+								<object class="IBLayoutConstant" key="constant">
+									<double key="value">0.0</double>
 								</object>
 								<float key="priority">1000</float>
 								<reference key="containingView" ref="774585933"/>
 								<int key="scoringType">6</int>
 								<float key="scoringTypeFloat">24</float>
-								<int key="contentType">3</int>
+								<int key="contentType">2</int>
 							</object>
 							<object class="IBNSLayoutConstraint" id="879927354">
 								<reference key="firstItem" ref="998097531"/>
@@ -605,21 +618,21 @@ amFtZXMuc25lZUBnbWFpbC5jb20</string>
 								<float key="scoringTypeFloat">24</float>
 								<int key="contentType">3</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="1068360418">
+							<object class="IBNSLayoutConstraint" id="441388557">
 								<reference key="firstItem" ref="1014055884"/>
 								<int key="firstAttribute">3</int>
 								<int key="relation">0</int>
-								<reference key="secondItem" ref="774585933"/>
+								<reference key="secondItem" ref="719852143"/>
 								<int key="secondAttribute">3</int>
 								<float key="multiplier">1</float>
 								<object class="IBLayoutConstant" key="constant">
-									<double key="value">58</double>
+									<double key="value">0.0</double>
 								</object>
 								<float key="priority">1000</float>
 								<reference key="containingView" ref="774585933"/>
-								<int key="scoringType">3</int>
-								<float key="scoringTypeFloat">9</float>
-								<int key="contentType">3</int>
+								<int key="scoringType">6</int>
+								<float key="scoringTypeFloat">24</float>
+								<int key="contentType">2</int>
 							</object>
 							<object class="IBNSLayoutConstraint" id="485489301">
 								<reference key="firstItem" ref="1014055884"/>
@@ -752,11 +765,11 @@ amFtZXMuc25lZUBnbWFpbC5jb20</string>
 							<reference ref="744295751"/>
 							<reference ref="714663628"/>
 							<reference ref="719852143"/>
-							<reference ref="1014055884"/>
 							<reference ref="998097531"/>
 							<reference ref="30544756"/>
 							<reference ref="872783225"/>
 							<reference ref="704817461"/>
+							<reference ref="1014055884"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -764,7 +777,7 @@ amFtZXMuc25lZUBnbWFpbC5jb20</string>
 						<int key="objectID">8</int>
 						<reference key="object" ref="1014055884"/>
 						<array class="NSMutableArray" key="children">
-							<object class="IBNSLayoutConstraint" id="390575123">
+							<object class="IBNSLayoutConstraint" id="793634277">
 								<reference key="firstItem" ref="1014055884"/>
 								<int key="firstAttribute">8</int>
 								<int key="relation">0</int>
@@ -772,7 +785,7 @@ amFtZXMuc25lZUBnbWFpbC5jb20</string>
 								<int key="secondAttribute">0</int>
 								<float key="multiplier">1</float>
 								<object class="IBLayoutConstant" key="constant">
-									<double key="value">91</double>
+									<double key="value">80</double>
 								</object>
 								<float key="priority">1000</float>
 								<reference key="containingView" ref="1014055884"/>
@@ -1008,15 +1021,10 @@ amFtZXMuc25lZUBnbWFpbC5jb20</string>
 						<reference key="parent" ref="774585933"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">207</int>
-						<reference key="object" ref="1068360418"/>
-						<reference key="parent" ref="774585933"/>
-					</object>
-					<object class="IBObjectRecord">
 						<int key="objectID">210</int>
 						<reference key="object" ref="872783225"/>
 						<array class="NSMutableArray" key="children">
-							<object class="IBNSLayoutConstraint" id="694663696">
+							<object class="IBNSLayoutConstraint" id="865511833">
 								<reference key="firstItem" ref="872783225"/>
 								<int key="firstAttribute">8</int>
 								<int key="relation">0</int>
@@ -1096,34 +1104,39 @@ amFtZXMuc25lZUBnbWFpbC5jb20</string>
 						<reference key="parent" ref="714663628"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">279</int>
-						<reference key="object" ref="616323406"/>
-						<reference key="parent" ref="774585933"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">280</int>
-						<reference key="object" ref="282484195"/>
-						<reference key="parent" ref="774585933"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">281</int>
-						<reference key="object" ref="133597491"/>
-						<reference key="parent" ref="774585933"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">282</int>
-						<reference key="object" ref="390575123"/>
-						<reference key="parent" ref="1014055884"/>
-					</object>
-					<object class="IBObjectRecord">
 						<int key="objectID">284</int>
-						<reference key="object" ref="36003328"/>
+						<reference key="object" ref="170602232"/>
 						<reference key="parent" ref="774585933"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">285</int>
-						<reference key="object" ref="694663696"/>
+						<reference key="object" ref="865511833"/>
 						<reference key="parent" ref="872783225"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">287</int>
+						<reference key="object" ref="169178019"/>
+						<reference key="parent" ref="774585933"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">288</int>
+						<reference key="object" ref="491345573"/>
+						<reference key="parent" ref="774585933"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">289</int>
+						<reference key="object" ref="812923519"/>
+						<reference key="parent" ref="774585933"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">290</int>
+						<reference key="object" ref="793634277"/>
+						<reference key="parent" ref="1014055884"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">291</int>
+						<reference key="object" ref="441388557"/>
+						<reference key="parent" ref="774585933"/>
 					</object>
 				</array>
 			</object>
@@ -1157,10 +1170,9 @@ amFtZXMuc25lZUBnbWFpbC5jb20</string>
 				</array>
 				<boolean value="NO" key="183.IBViewMetadataTranslatesAutoresizingMaskIntoConstraints"/>
 				<string key="191.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="207.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="210.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<array class="NSMutableArray" key="210.IBViewMetadataConstraints">
-					<reference ref="694663696"/>
+					<reference ref="865511833"/>
 				</array>
 				<boolean value="NO" key="210.IBViewMetadataTranslatesAutoresizingMaskIntoConstraints"/>
 				<string key="215.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -1181,12 +1193,13 @@ amFtZXMuc25lZUBnbWFpbC5jb20</string>
 				<string key="260.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="267.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="268.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="279.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="280.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="281.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="282.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="284.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="285.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="287.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="288.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="289.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="290.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="291.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="31.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="52.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<boolean value="NO" key="52.IBViewMetadataTranslatesAutoresizingMaskIntoConstraints"/>
@@ -1201,18 +1214,18 @@ amFtZXMuc25lZUBnbWFpbC5jb20</string>
 					<reference ref="157695632"/>
 					<reference ref="802067102"/>
 					<reference ref="485489301"/>
-					<reference ref="1068360418"/>
+					<reference ref="441388557"/>
 					<reference ref="879927354"/>
-					<reference ref="616323406"/>
+					<reference ref="491345573"/>
+					<reference ref="812923519"/>
 					<reference ref="293709151"/>
 					<reference ref="478345209"/>
-					<reference ref="36003328"/>
+					<reference ref="170602232"/>
 					<reference ref="360944260"/>
 					<reference ref="446343903"/>
-					<reference ref="282484195"/>
 					<reference ref="106588849"/>
 					<reference ref="1037935863"/>
-					<reference ref="133597491"/>
+					<reference ref="169178019"/>
 				</array>
 				<string key="73.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<array class="NSMutableArray" key="73.IBViewMetadataConstraints">
@@ -1222,7 +1235,7 @@ amFtZXMuc25lZUBnbWFpbC5jb20</string>
 				<string key="8.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<array class="NSMutableArray" key="8.IBViewMetadataConstraints">
 					<reference ref="296001553"/>
-					<reference ref="390575123"/>
+					<reference ref="793634277"/>
 				</array>
 				<boolean value="NO" key="8.IBViewMetadataTranslatesAutoresizingMaskIntoConstraints"/>
 			</dictionary>
@@ -1230,7 +1243,7 @@ amFtZXMuc25lZUBnbWFpbC5jb20</string>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">286</int>
+			<int key="maxID">291</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
